--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
         <footer>
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-4 col-md-6">
+                    <div class="col-lg-4 col-md-6 col-xs-12">
                         <h3>Sitemap</h3>
                         <ul class="list-unstyled triCols">
                             <li>Home</li>
@@ -501,7 +501,7 @@
                         </ul>
                     </div><!--col-lg-4 col-md-6-->
                     
-                    <div class="col-lg-4 col-md-6">
+                    <div class="col-lg-4 col-md-6 col-xs-12">
                         <h3>Latest Articles</h3>                        
                         <div class="media">
                           <div class="media-left">
@@ -540,13 +540,13 @@
                         </div><!--media-->
                     </div><!--col-lg-4 col-md-6-->
                     
-                    <div class="col-lg-4">
+                    <div class="col-lg-4 col-xs-12">
                         <h3>Our Awesome Works</h3>
                         <img class="img-thumbnail" src="images/works/1.jpg" width="150" height="100" alt="..." />
                         <img class="img-thumbnail" src="images/works/2.jpg" width="150" height="100" alt="..." />
                         <img class="img-thumbnail" src="images/works/3.jpg" width="150" height="100" alt="..." />
                         <img class="img-thumbnail" src="images/works/4.jpg" width="150" height="100" alt="..." />
-                    </div><!--col-lg-4-->
+                    </div><!--col-lg-4 col-xs-12-->
                 </div><!--row-->
             </div><!--container-->
             <div class="copyright text-center">
